kic/2.9/discovery/02_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: kong
spec:
  controller: ingress-controllers.konghq.com/kong
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
    - host: kong.example
      http:
        paths:
          - path: /echo
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 80
